# Projects_Course1

./: CMakeLists.txt  README.md
Red-BlackTree/: CMakeLists.txt  README.md  main.cpp
Separator/: CMakeLists.txt  input.txt  main.cpp  output.txt
course_work1/: CMakeLists.txt  Text.txt  gaaga.txt  main.cpp
course_work1/practics1234/: 2D_arrays.cpp  2d_arrays.h  arrays.cpp  arrays.h  p.types.cpp  strings.cpp  strings.h  types.h
course_work2/: CMakeLists.txt  README.md  main.cpp  output_tree.txt  reportCourse2sem.docx  tree.txt
practical1/: CMakeLists.txt  main.cpp  report1.docx
practical1_2/: CMakeLists.txt  README.md  main.cpp  report1(2).docx
practical2/: CMakeLists.txt  main.cpp  report2.docx
practical2_2/: CMakeLIsts.txt  README.md  main.cpp  report2(2).docx
practical3/: CMakeLists.txt  main.cpp  report3.docx
practical3_2/: CMakeLists.txt  README.md  main.cpp  report3(2).docx
practical4/: CMakeLists.txt  Text.txt  gaaga.txt  main.cpp  report4.docx
