cmake_minimum_required(VERSION 3.26)
project(course_work1)

set(CMAKE_CXX_STANDARD 17)

add_executable(course_work1 main.cpp practics1234/types.h practics1234/p.types.cpp practics1234/arrays.h practics1234/arrays.cpp practics1234/2d_arrays.h practics1234/2D_arrays.cpp practics1234/strings.h practics1234/strings.cpp)
